<resources>
    <string name="facebook_app_id" translatable="false">279623862759172</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb279623862759172</string>
    <string name="app_name" translatable="false">Gym Assistant</string>
    <string name="stopwatch_initial_value" translatable="false">00:00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="muscle_group">Muscle group</string>
    <string name="sort">Sort</string>
    <string name="choose_exercise">Choose exercise</string>
    <string name="muscle_group_colon">Muscle group:</string>
    <string name="exercise_colon">Exercise:</string>
    <string name="begin_set">Begin set</string>
    <string name="end_workout">End workout</string>
    <string name="free_workout">Free workout</string>
    <string name="choose_workout_type">Choose workout type</string>
    <string name="planned_workout">Planned workout</string>
    <string name="back">Back</string>
    <string name="begin_workout">Begin workout</string>
    <string name="plan_workout">Plan workout</string>
    <string name="progress">Progress</string>
    <string name="workout_history">Workout history</string>
    <string name="settings">Settings</string>
    <string name="application_logo">Application logo</string>
    <string name="exercise_name">Exercise name</string>
    <string name="weight_colon">Weight:</string>
    <string name="rep_count_colon">Rep count:</string>
    <string name="next_set">Next set</string>
    <string name="next_exercise">Next exercise</string>
    <string name="cancel_set">Cancel set</string>
    <string name="set">Set</string>
    <string name="_1" translatable="false">1</string>
    <string name="save_set">Save set</string>
    <string name="grey_background">Grey background</string>
    <string name="clear_workout_history">Clear workout history</string>
    <string name="choose_available_exercises">Choose available exercises</string>
    <string name="history_erased_notification">Workout history has been erased</string>
    <string name="fill_text_fields_notification">Fill both fields or cancel set</string>
    <string name="a_z" translatable="false">A-Z</string>
    <string name="z_a" translatable="false">Z-A</string>
    <string name="default_settings">Reset app to default settings</string>
    <string name="database_name" translatable="false">gymAssistantDB</string>
    <string name="default_settings_restored_notification">Application has been restored to it\'s default settings</string>
    <string name="add_exercise">Add new exercise to database</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send_invitation">Send invitation</string>
    <string name="send_invitation_description">Pick the trainer you wish to establish cooperation with.</string>
    <string name="pending_invitations">Pending invitations</string>
    <string name="my_trainer">My trainer</string>
    <string name="no_trainer">No trainer</string>
    <string name="find_trainer">Find trainer</string>
    <string name="your_charges">Your charges</string>
    <string name="category">Category</string>
    <string name="measurements">Measurements</string>
    <string name="body_part">Body part</string>
    <string name="measurement_cm">Measurement [cm]</string>
    <string name="add_measurements">Add body measurements</string>
    <string name="check_progress">Check progress</string>
    <string name="trainer">Trainer</string>
    <string name="delete_invitation">Delete pending invitation</string>
    <string name="invitation_pending">There is an invitation waiting to be accepted</string>
    <string name="manage_charges">Manage charges</string>
    <string name="manage_invitations">Manage invitations</string>
    <string name="generic_header" translatable="false">Header</string>
    <string name="exercises">Exercises</string>
    <string name="subcategory">Subcategory</string>
    <string name="logout">Logout</string>
    <string name="manage_measurements">Manage measurements</string>
</resources>
